# aoc18

./: .merlin  Five.ml  FiveTwo.ml  Four.ml  FourTwo.ml  Nine.ml  NineTwo.ml  One.ml  OneTwo.ml  Three.ml  ThreeTwo.ml  Time.ml  Two.ml  TwoTwo.ml  dune  dune-project  run_all.sh
