(library
  (name AOCUtils)
  (ocamlopt_flags -O3)
  (modules Time)
  (libraries batteries)
  )

(executable
  (name "One")
  (ocamlopt_flags -O3)
  (modules One)
  (libraries batteries AOCUtils)
  )

(executable
  (name "OneTwo")
  (ocamlopt_flags -O3)
  (modules OneTwo)
  (libraries batteries AOCUtils)
  )

(executable
  (name "Two")
  (ocamlopt_flags -O3)
  (modules Two)
  (libraries batteries AOCUtils)
  )

(executable
  (name "TwoTwo")
  (ocamlopt_flags -O3)
  (modules TwoTwo)
  (libraries batteries AOCUtils)
  )

(executable
  (name "Three")
  (ocamlopt_flags -O3)
  (modules Three)
  (libraries batteries AOCUtils)
  )

(executable
  (name "ThreeTwo")
  (ocamlopt_flags -O3)
  (modules ThreeTwo)
  (libraries batteries AOCUtils)
  )


(executable
  (name "Four")
  (ocamlopt_flags -O3)
  (modules Four)
  (libraries batteries AOCUtils)
  )

(executable
  (name "FourTwo")
  (ocamlopt_flags -O3)
  (modules FourTwo)
  (libraries batteries AOCUtils)
  )

(executable
  (name "Five")
  (ocamlopt_flags -O3)
  (modules Five)
  (libraries batteries AOCUtils)
  )

(executable
  (name "FiveTwo")
  (ocamlopt_flags -O3)
  (modules FiveTwo)
  (libraries batteries AOCUtils)
  )

(executable
  (name "Nine")
  (ocamlopt_flags -O3)
  (modules Nine)
  (libraries batteries AOCUtils)
  )

(executable
  (name "NineTwo")
  (ocamlopt_flags -O3)
  (modules NineTwo)
  (libraries batteries AOCUtils)
  )

